# ARM64DBI

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lidongyooo/arm64dbidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/dbi/: Assembler.S  Assembler.cpp  Assembler.h  DBI.cpp  DBI.h  Memory.cpp  Memory.h  Router.S  Router.cpp  Router.h  Translator.cpp  Translator.h  Utils.cpp  Utils.h
app/src/main/cpp/types/: types.h
app/src/main/java/com/lidongyooo/arm64dbidemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lidongyooo/arm64dbidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
